--- a/admin/package.json
+++ b/admin/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --mode --open",
+    "dev": "vue-cli-service serve --mode --open",
     "dev-serve": "vue-cli-service serve --mode dev",
     "build": "vue-cli-service build --mode",
-    "dev": "vue-cli-service build --mode dev",
     "uat1": "vue-cli-service build --mode uat1",
     "stg": "vue-cli-service build --mode 'stg'",
     "prd": "vue-cli-service build --mode 'prd'",
@@ -18,15 +18,12 @@
     "element-ui": "^2.12.0",
     "es6-promise": "^4.2.8",
     "moment": "^2.24.0",
-    "node-sass": "^4.11.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
     "cache-loader": "^4.1.0",
-    "sass-loader": "^7.1.0",
-    "scss-loader": "^0.0.1",
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
