--- a/admin/package.json
+++ b/admin/package.json
@@ -18,6 +18,9 @@
     "element-ui": "^2.12.0",
     "es6-promise": "^4.2.8",
     "moment": "^2.24.0",
+    "node-sass": "^4.14.1",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
